@@ -49,6 +49,7 @@
     <Compile Include="ContextAttribute.cs" />
     <Compile Include="DescribeAttribute.cs" />
     <Compile Include="DisplayClassAttribute.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EvaluationResult.cs" />
     <Compile Include="Examples.cs" />
     <Compile Include="ExpectationFailedException.cs" />
